FIxed alignment issues

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -26,8 +26,8 @@ body {
 .register-container {
   position: relative;
   background-color: #262626;
-  width: 80%;
-  height: 50%;
+  width: 87%;
+  height: 74%;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@ body {
 
 form {
   position: absolute;
-  top: 30%;
+  top: 20%;
   bottom: 50%;
 }
 
@@ -55,7 +55,7 @@ form {
   align-items: center;
 }
 
-.form-group>input {
+.form-group > input {
   position: relative;
   width: calc(100% - 30px);
   height: 40px;
@@ -118,4 +118,15 @@ p {
 
 a {
   color: #fff;
+}
+
+.register-container img {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
+  border-radius: 50%;
+  object-fit: cover;
 }
